Fixed bug that kept collapsed toolbar button from being clicked on small screen.

--- a/ofSketchApp/bin/data/DocumentRoot/css/style.css
+++ b/ofSketchApp/bin/data/DocumentRoot/css/style.css
@@ -93,7 +93,8 @@ code {
 
 #toolbar {
 
-  position: absolute; 
+  position: absolute;
+  display: inline-block;
   top: 10px; 
   left: 60px; 
   z-index: 5;
